--- a/application/extra/view/themes/mincss/register.html
+++ b/application/extra/view/themes/mincss/register.html
@@ -45,6 +45,7 @@
             if ('success' == d.status) {
                 localStorage.setItem('username', postData.username);
                 localStorage.setItem('password', postData.password);
+                $('#error-info').html('注册成功');
                 window.location.href = '/login';
             }else{
                 $('#error-info').html(d.msg);
