--- a/application/extra/view/themes/mincss/problem.html
+++ b/application/extra/view/themes/mincss/problem.html
@@ -129,12 +129,10 @@
 			'language': $('#submit-language').val(),
 			'code': $('#submit-source').val()
 		};
-		return false;
 		$.post('/api/solution/submit_problem_code',codeData,function(d){
 			if ('success' == d.status) {
-				console.log(d);
 				// 监控题目状态
-				status_monitor(d.data.solution_id);
+				// status_monitor(d.data.solution_id);
 				$('#error-info').html('');
 			}else{
 				$('#error-info').html(d.msg + " @ " + getNowFormatDate());
