--- a/application/extra/view/themes/mincss/problem.html
+++ b/application/extra/view/themes/mincss/problem.html
@@ -132,6 +132,7 @@
 		$.post('/api/solution/submit_problem_code',codeData,function(d){
 			if ('success' == d.status) {
 				// 监控题目状态
+				alert(JSON.stringify(d));
 				// status_monitor(d.data.solution_id);
 				$('#error-info').html('');
 			}else{
