--- a/application/extra/view/themes/mincss/problem.html
+++ b/application/extra/view/themes/mincss/problem.html
@@ -196,9 +196,10 @@
 			'code': $('#submit-source').val()
 		};
 		$.post('/api/solution/submit_problem_code',codeData,function(d){
+			alert(JSON.stringify(d));
 			if ('success' === d.status) {
 				// 监控题目状态
-				// status_monitor(d.data.solution_id);
+				status_monitor(d.data.solution_id);
 				$('#error-info').html('');
 			}else{
 				$('#error-info').html(d.msg + " @ " + getNowFormatDate());
