--- a/application/extra/view/themes/mincss/problem.html
+++ b/application/extra/view/themes/mincss/problem.html
@@ -54,6 +54,7 @@
 
 <script type="text/javascript">
 	var problem_id = {$problem->problem_id};
+	var solution_id = '';
 </script>
 
 <script type="text/javascript">
@@ -171,13 +172,11 @@
 		return currentdate;
 	}
 
-	function status_monitor(solution_id){
-		alert(solution_id);
+	function status_monitor(){
 		$.get('/api/solution/status?solution_id='+solution_id,function(d){
-			console.log(d);
 			if (d.data.result < 4) {
 				$('#judge-info').html(d.data.result_text);
-				setTimeout(status_monitor(solution_id),300);
+				window.setTimeout("status_monitor()",300);
 			}else{
 				$('#judge-info').html(d.data.result_text);
 				$('#judge-info').css('color', solution_result_color[d.data.result_code]);
@@ -201,7 +200,8 @@
 			if ('success' == d.status) {
 				$('#error-info').html('');
 				// 监控题目状态
-				status_monitor(d.data.solution_id);
+				solution_id = d.data.solution_id;
+				status_monitor();
 			}else{
 				$('#error-info').html(d.msg + " @ " + getNowFormatDate());
 			}
