--- a/application/extra/view/themes/mincss/problem.html
+++ b/application/extra/view/themes/mincss/problem.html
@@ -185,6 +185,9 @@
 				// 	$('#solution-compile-error').html(d.data.compile_info.error);
 				// 	$('#compile-info-panel').show();
 				// }
+				// if ('4' == d.data.result) {
+					// $('#submit-source').val('');
+				// }
 			}
 		},'json');
 	}
