--- a/application/extra/view/themes/mincss/contest-problem.html
+++ b/application/extra/view/themes/mincss/contest-problem.html
@@ -53,5 +53,100 @@
 	<div class="content">
 		<a href="/problem?id={$problem->problem_id}" target="_blank">Original Problem Link</a>
 	</div>
+
+	<form method="post" onsubmit="return submit_code();">
+		<p><span>{$lang.language}：</span><select name="language" id="submit-language">{volist name="allowed_langs" id="item"}<option value="{$item.id}">{$item.name} ({$item.version})</option>{/volist}</select></p>
+		<p><textarea class="form-control" style="font-family: Consolas,Courier,monospace;width: 60%" name="source" id="submit-source" rows="15"></textarea></p>
+		<p><button type="submit">{$lang.submit}</button>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: red" id="error-info"></span><span id="judge-info"></span></p>
+	</form>
 </div>
+
+<script type="text/javascript">
+	var solution_result_color = {
+		'result_code_pending': 'black',
+		'result_code_rejuding': 'black',
+		'result_code_compiling': 'black',
+		'result_code_running': 'black',
+		'result_code_ac': 'green',
+		'result_code_pe': 'black',
+		'result_code_wa': 'red',
+		'result_code_tle': 'red',
+		'result_code_mle': 'red',
+		'result_code_ole': 'red',
+		'result_code_re': 'red',
+		'result_code_ce': 'red',
+		'result_code_co': 'black',
+		'result_code_tr': 'black',
+		'result_code_so': 'black'
+	};
+
+
+	function getNowFormatDate() {
+		var date = new Date();
+		var seperator1 = "-";
+		var seperator2 = ":";
+		var month = date.getMonth() + 1;
+		var strDate = date.getDate();
+		if (month >= 1 && month <= 9) {
+			month = "0" + month;
+		}
+		if (strDate >= 0 && strDate <= 9) {
+			strDate = "0" + strDate;
+		}
+
+		var hour = date.getHours();
+		var minute = date.getMinutes();
+		var second = date.getSeconds();
+
+		var currentdate = date.getFullYear() + seperator1 + month + seperator1 + strDate + " ";
+		if (hour < 10) currentdate += '0';
+		currentdate += hour + seperator2;
+		if (minute < 10) currentdate += '0';
+		currentdate += minute + seperator2;
+		if (second < 10) currentdate += '0';
+		currentdate += second;
+		//+ date.getHours() + seperator2 + date.getMinutes() + seperator2 + date.getSeconds();
+		return currentdate;
+	}
+
+	function status_monitor(){
+		$.get('/api/solution/status?solution_id='+solution_id,function(d){
+			if (d.data.result < 4) {
+				$('#judge-info').html(d.data.result_text);
+				window.setTimeout("status_monitor()",300);
+			}else{
+				$('#judge-info').html(d.data.result_text);
+				$('#judge-info').css('color', solution_result_color[d.data.result_code]);
+				/* 如果是编译错误还要显示编译错误信息 */
+				// if ('11' == d.data.result) {
+				// 	$('#solution-compile-error').html(d.data.compile_info.error);
+				// 	$('#compile-info-panel').show();
+				// }
+				// if ('4' == d.data.result) {
+				// $('#submit-source').val('');
+				// }
+			}
+		},'json');
+	}
+
+	function submit_code(){
+		var codeData = {
+			'contest_id': {$contest->contest_id},
+			'problem_num': {$contest_problem->num},
+			'language': $('#submit-language').val(),
+			'code': $('#submit-source').val()
+		};
+		$.post('/api/solution/submit_contest_problem_code',codeData,function(d){
+			if ('success' == d.status) {
+				$('#error-info').html('');
+				// 监控题目状态
+				solution_id = d.data.solution_id;
+				status_monitor();
+			}else{
+				$('#error-info').html(d.msg + " @ " + getNowFormatDate());
+			}
+		},'json');
+		return false;
+	}
+</script>
 {/block}
