--- a/application/extra/view/themes/mincss/layout/common.html
+++ b/application/extra/view/themes/mincss/layout/common.html
@@ -7,6 +7,7 @@
 	<title>{block name='titlepart'}{$lang['welcome_to_justoj']}{/block}</title>
 	<link href="/static/mincss/entireframework.min.css" rel="stylesheet" type="text/css">
 	<script src="/static/jquery/1.12.4/jquery.min.js"></script>
+	<script src="/static/jquery/1.12.4/json.js"></script>
 </head>
 <body>
 
