--- a/application/extra/view/themes/mincss/problem.html
+++ b/application/extra/view/themes/mincss/problem.html
@@ -1,6 +1,14 @@
 {extend name="extra@themes/mincss/layout/user" /}
 {block name='titlepart'}{$problem->problem_id} - {$problem->title} - {$lang['justoj']}{/block}
 {block name="body"}
+<script type="text/x-mathjax-config">
+		MathJax.Hub.Config({
+			tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+			"HTML-CSS": {linebreaks: {automatic: true}}
+		});
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
 <!--题目内容显示页面 begin-->
 <div class="container">
 	<h2 align="center">
