--- a/application/extra/view/themes/mincss/paste.html
+++ b/application/extra/view/themes/mincss/paste.html
@@ -4,7 +4,7 @@
 <!--<link rel="stylesheet" href="/static/xadmin/css/xadmin.css">-->
 <br>
 <div class="container">
-    <form id="pasteForm" class="smooth">
+    <form id="pasteForm">
         <div style="width: 300px">
             <span>{$lang.language}: </span>
             <select name="lang">
