--- a/application/extra/view/themes/mincss/status.html
+++ b/application/extra/view/themes/mincss/status.html
@@ -77,7 +77,7 @@
             <td width="10%">{$solution->time} ms</td>
             <td width="10%">
                 {if $is_administrator || ($loginuser && $solution->user_id == $loginuser->user_id)}
-                <a href="javascript:;" onclick="show_solution({$solution->solution_id})">{$solution->language_text}</a>
+                <a target="_blank" href="/status/solution/show/solution_id/{$solution->solution_id}" >{$solution->language_text}</a>
                 {else}
                 {$solution->language_text}
                 {/if}
