docs: modified change-password.html edit-my-profile.html profile.html

--- a/application/extra/view/themes/mincss/change-password.html
+++ b/application/extra/view/themes/mincss/change-password.html
@@ -2,32 +2,22 @@
 {block name='titlepart'}{$lang['change_password']} - {$lang['justoj']}{/block}
 {block name="body"}
 <div class="container">
-    <div class="panel panel-primary" style="width: 573px;margin: auto;">
-        <div class="panel-heading">
-            <h3 class="panel-title">{$lang.change_password}</h3>
-        </div>
-        <div class="panel-body">
-            <form class="form-horizontal" id="resetPasswordForm">
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">{$lang.password}</label>
-                    <div class="col-sm-8">
-                        <input type="password" class="form-control" name="password" placeholder="{$lang.please_input_password}">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">{$lang.password_again}</label>
-                    <div class="col-sm-8">
-                        <input type="password" class="form-control" name="password_again" placeholder="{$lang.please_input_password_again}">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-8 col-sm-offset-4">
-                        <button class="btn btn-success" type="submit">{$lang.submit}</button>
-                        <button class="btn btn-default" type="button">{$lang.reset}</button>
-                    </div>
-                </div>
-            </form>
-        </div>
+    <div>
+        <h3>{$lang.change_password}</h3>
+        <form id="resetPasswordForm">
+            <div>
+                <span>{$lang.password}：</span><input type="password" name="password">
+            </div>
+            <div>
+                <span>{$lang.password_again}：</span><input type="password" name="password_again">
+            </div>
+            <div>
+                <p>
+                    <button type="submit">{$lang.submit}</button>
+                    <button type="button">{$lang.reset}</button>
+                </p>
+            </div>
+        </form>
     </div>
 </div>
 
