--- a/application/extra/view/themes/mincss/profile.html
+++ b/application/extra/view/themes/mincss/profile.html
@@ -7,40 +7,40 @@
 		<div>
 			<div>
 				<p>
-					<span class="addon">{$lang.username}</span><input type="text" class="smooth" value="{$user->user_id}" placeholder="{$lang.please_input_password}" disabled readonly>
+					<span class="addon">{$lang.username}：</span><input type="text" value="{$user->user_id}" placeholder="{$lang.please_input_password}" disabled readonly>
 				</p>
 
 				<p>
-					<span class="addon">{$lang.nickname}</span><input type="text" class="smooth" name="nickname" value="{$user->nick}" disabled readonly>
+					<span class="addon">{$lang.nickname}：</span><input type="text" name="nickname" value="{$user->nick}" disabled readonly>
 				</p>
 
 				<p>
-					<span class="addon">{$lang.fullname}</span><input type="text" class="smooth" name="fullname" value="{$user->realname}" disabled readonly>
+					<span class="addon">{$lang.fullname}：</span><input type="text" name="fullname" value="{$user->realname}" disabled readonly>
 				</p>
 
 				<p>
-					<span class="addon">{$lang.school}</span><input type="text" class="smooth" name="school" value="{$user->school}" disabled readonly>
+					<span class="addon">{$lang.school}：</span><input type="text" name="school" value="{$user->school}" disabled readonly>
 				</p>
 
 				<p>
-					<span class="addon">{$lang.academy}</span><input type="text" class="smooth" name="academy" value="{$user->academy}" disabled readonly>
+					<span class="addon">{$lang.academy}：</span><input type="text" name="academy" value="{$user->academy}" disabled readonly>
 				</p>
 
 				<p>
-					<span class="addon">{$lang.class}</span><input type="text" class="smooth" name="class" value="{$user->class}" disabled readonly>
+					<span class="addon">{$lang.class}：</span><input type="text" name="class" value="{$user->class}" disabled readonly>
 				</p>
 
 				<p>
-					<span class="addon">Email</span><input type="text" class="smooth" name="email" value="{$user->email}" disabled readonly>
+					<span class="addon">Email：</span><input type="text" name="email" value="{$user->email}" disabled readonly>
 				</p>
 
 				<p>
-					<span class="addon">{$lang.phone}</span><input type="text" class="smooth" name="phone" value="{$user->phone}" disabled readonly>
+					<span class="addon">{$lang.phone}：</span><input type="text" name="phone" value="{$user->phone}" disabled readonly>
 				</p>
 
 				<p>
-					<a href="/profile/Editmyprofile" class="btn btn-sm btn-a">{$lang.edit}</a>
-					<a href="/profile/Changepassword" class="btn btn-sm btn-a">{$lang.change_password}</a>
+					<a href="/profile/editmyprofile">{$lang.edit}</a>
+					<a href="/profile/changepassword">{$lang.change_password}</a>
 				</p>
 			</div>
 		</div>
