--- a/application/extra/view/themes/mincss/edit-my-profile.html
+++ b/application/extra/view/themes/mincss/edit-my-profile.html
@@ -2,76 +2,47 @@
 {block name='titlepart'}{$lang['personal_information']} - {$lang['justoj']}{/block}
 {block name="body"}
 <div class="container">
-	<div class="panel panel-primary" style="width: 573px;margin: auto;">
-		<div class="panel-heading">
-			<h3 class="panel-title">{$lang.personal_information}</h3>
-		</div>
-		<div class="panel-body">
-			<form class="form-horizontal" id="editProfileForm">
-				<div class="form-group">
-					<label class="col-sm-4 control-label">{$lang.username}</label>
-					<div class="col-sm-8">
-						<input type="text" class="form-control" value="{$user->user_id}" placeholder="{$lang.please_input_password}" disabled readonly>
-					</div>
-				</div>
+	<div>
+        <h3>{$lang.personal_information}</h3>
+        <form id="editProfileForm">
+            <p>
+                <span>{$lang.username}：</span><input type="text" value="{$user->user_id}" placeholder="{$lang.please_input_password}" disabled readonly>
+            </p>
+            <p>
+                <span><span style="color: red">*</span> {$lang.nickname}：</span><input type="text" name="nickname" value="{$user->nick}">
+            </p>
 
-                <div class="form-group">
-                    <label class="col-sm-4 control-label"><span style="color: red">*</span> {$lang.nickname}</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" name="nickname" value="{$user->nick}">
-                    </div>
+            <p>
+                <span><span style="color: red">*</span> {$lang.fullname}：</span><input type="text" name="realname" value="{$user->realname}">
+            </p>
+
+            <p>
+                <span>{$lang.school}：</span><input type="text" name="school" value="{$user->school}">
+            </p>
+
+            <p>
+                <span>{$lang.academy}：</span><input type="text" name="academy" value="{$user->academy}">
+            </p>
+
+            <p>
+                <span>{$lang.class}：</span><input type="text" name="class" value="{$user->class}">
+            </p>
+
+            <p>
+                <span><span style="color: red">*</span> Email：</span><input type="text" name="email" value="{$user->email}">
+            </p>
+
+            <p>
+                <span>{$lang.phone}：</span><input type="text" name="phone" value="{$user->phone}">
+            </p>
+
+            <div>
+                <div class="col-sm-8 col-sm-offset-4">
+                    <button type="submit">{$lang.save}</button>
+                    <a href="/profile">返回</a>
                 </div>
-
-                <div class="form-group">
-                    <label class="col-sm-4 control-label"><span style="color: red">*</span> {$lang.fullname}</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" name="realname" value="{$user->realname}">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">{$lang.school}</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" name="school" value="{$user->school}">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">{$lang.academy}</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" name="academy" value="{$user->academy}">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">{$lang.class}</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" name="class" value="{$user->class}">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-sm-4 control-label"><span style="color: red">*</span> Email</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" name="email" value="{$user->email}">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">{$lang.phone}</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" name="phone" value="{$user->phone}">
-                    </div>
-                </div>
-
-                <div class="form-group">
-					<div class="col-sm-8 col-sm-offset-4">
-						<button type="submit" class="btn btn-success">{$lang.save}</button>
-						<a class="btn btn-default" href="/profile">返回</a>
-					</div>
-				</div>
-			</form>
-		</div>
+            </div>
+        </form>
 	</div>
 </div>
 
