--- a/application/extra/view/themes/bootstrap/problem.html
+++ b/application/extra/view/themes/bootstrap/problem.html
@@ -1,6 +1,24 @@
 {extend name="extra@themes/bootstrap/layout/user" /}
 {block name='titlepart'}{$problem->problem_id} - {$problem->title} - {$lang['justoj']}{/block}
 {block name="body"}
+<style>
+	.result_code_pending{color: black;}
+	.result_code_rejuding {color: black;}
+	.result_code_compiling {color: black;}
+	.result_code_running {color: black;}
+	.result_code_ac {color: green;}
+	.result_code_pe {color: black;}
+	.result_code_wa {color: red;}
+	.result_code_tle {color: red;}
+	.result_code_mle {color: red;}
+	.result_code_ole {color: red;}
+	.result_code_re {color: red;}
+	.result_code_ce {color: red;}
+	.result_code_co {color: black;}
+	.result_code_tr {color: black;}
+	.result_code_so {color: black;}
+</style>
+
 <script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
 			tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
@@ -207,24 +225,6 @@
 <!--测试结果之模态框 end-->
 
 <script type="text/javascript">
-var solution_result_color = {
-    'result_code_pending': 'black',
-    'result_code_rejuding': 'black',
-    'result_code_compiling': 'black',
-    'result_code_running': 'black',
-    'result_code_ac': 'green',
-    'result_code_pe': 'black',
-    'result_code_wa': 'red',
-    'result_code_tle': 'red',
-    'result_code_mle': 'red',
-    'result_code_ole': 'red',
-    'result_code_re': 'red',
-    'result_code_ce': 'red',
-    'result_code_co': 'black',
-    'result_code_tr': 'black',
-    'result_code_so': 'black'
-};
-
 function show_submit_code_modal(){
     $('#compile-info-panel').hide();
     $('#submit-source').val('');
@@ -266,11 +266,11 @@ function status_monitor(solution_id){
     $.get('/api/Solution/status?solution_id='+solution_id,function(d){
         console.log(d);
         if (d.data.result < 4) {
-            $('#solution-result').html(d.data.result_text);
+			$('#solution-result').html('<span class="'+d.data.result_code+'">'+d.data.result_text+'</span>');
             setTimeout(status_monitor(solution_id),300);
 		}else{
-            $('#solution-result').html(d.data.result_text);
-            $('#solution-result').css('color', solution_result_color[d.data.result_code]);
+            $('#solution-result').html('<span class="'+d.data.result_code+'">' + d.data.result_text + '</span>');
+            // $('#solution-result').css('color', solution_result_color[d.data.result_code]);
             $('#solution-memory').html(d.data.memory+' B');
             $('#solution-exe-time').html(d.data.time+' ms');
             /* 如果是编译错误还要显示编译错误信息 */
