--- a/application/extra/view/themes/mincss/layout/common.html
+++ b/application/extra/view/themes/mincss/layout/common.html
@@ -8,6 +8,23 @@
 	<link href="/static/mincss/entireframework.min.css" rel="stylesheet" type="text/css">
 	<script src="/static/jquery/1.12.4/jquery.min.js"></script>
 	<script src="/static/jquery/1.12.4/json.js"></script>
+	<style>
+		.result_code_pending{color: black;}
+		.result_code_rejuding {color: black;}
+		.result_code_compiling {color: black;}
+		.result_code_running {color: black;}
+		.result_code_ac {color: green;}
+		.result_code_pe {color: black;}
+		.result_code_wa {color: red;}
+		.result_code_tle {color: red;}
+		.result_code_mle {color: red;}
+		.result_code_ole {color: red;}
+		.result_code_re {color: red;}
+		.result_code_ce {color: red;}
+		.result_code_co {color: black;}
+		.result_code_tr {color: black;}
+		.result_code_so {color: black;}
+	</style>
 </head>
 <body>
 
