--- a/application/extra/view/themes/bootstrap/contest-problem.html
+++ b/application/extra/view/themes/bootstrap/contest-problem.html
@@ -1,23 +1,6 @@
 {extend name="extra@themes/bootstrap/layout-contest/contest-layout" /}
 {block name='titlepart'}{$alphabet[$contest_problem->num]}:{$problem->title} - {$contest->title} - 江西理工大学编程俱乐部{/block}
 {block name="body"}
-<style>
-	.result_code_pending{color: black;}
-	.result_code_rejuding {color: black;}
-	.result_code_compiling {color: black;}
-	.result_code_running {color: black;}
-	.result_code_ac {color: green;}
-	.result_code_pe {color: black;}
-	.result_code_wa {color: red;}
-	.result_code_tle {color: red;}
-	.result_code_mle {color: red;}
-	.result_code_ole {color: red;}
-	.result_code_re {color: red;}
-	.result_code_ce {color: red;}
-	.result_code_co {color: black;}
-	.result_code_tr {color: black;}
-	.result_code_so {color: black;}
-</style>
 <script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
 			tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
@@ -62,7 +45,7 @@
 		{/if}
 
 		{if $is_root}
-		<button class="btn btn-danger" onclick="layer.alert('暂未开放')">{$lang.rejudge}</button>
+		<button class="btn btn-danger" onclick="rejudge_problem({$contest_problem->contest_id},{$contest_problem->num});">{$lang.rejudge}</button>
 		{/if}
 		<!--功能按钮组 end-->
 	</div>
@@ -93,10 +76,6 @@
 		<button type="button" class="btn btn-success" onclick="show_submit_code_modal()">{$lang.submit}</button>
 		{if $loginuser}
 		<a href="/contest/Status?id={$contest->contest_id}&run_id=&username={$loginuser->user_id}&problem_id={$contest_problem->num}" target="_blank" type="button" class="btn btn-default">{$lang.my_status}</a>
-		{/if}
-
-		{if $is_root}
-		<button class="btn btn-danger" onclick="layer.alert('暂未开放')">{$lang.rejudge}</button>
 		{/if}
 		<!--功能按钮组 end-->
 	</div>
@@ -300,6 +279,22 @@
         console.log(lang_val);
         localStorage.setItem("lang_val", lang_val);
     }
+
+    function rejudge_problem(contest_id, pid) {
+    	// layer.alert(contest_id + ' ' + pid);
+		layer.confirm('确定重判此题目？', function(){
+			// layer.alert(contest_id + ' ' + pid);
+			$.post('/api/solution/rejudge_contest_problem', {'contest_id': contest_id, 'pid': pid}, function(d){
+				if ('success' == d.status) {
+					window.location.href = '/contest/Status?id='+contest_id+'&problem_id='+pid;
+				}else{
+					layer.alert(d.msg,function(){
+						window.location.href = '/contest/Status?id='+contest_id+'&problem_id='+pid;
+					});
+				}
+			}, 'json');
+		})
+	}
 
     $(function(){
         // 自动初始化语言
